# Physical-AI-Humanoid-Robotics

./: .gitignore  pyproject.toml  requirements.txt  vercel.json
ai_book/history/prompts/005-chatbot-ui-updates/: 001-implement-chatbot-icon.green.prompt.md
ai_book/specs/005-chatbot-ui-updates/: plan.md  spec.md  tasks.md
backend/: ai_agent.py  app.py  main.py  pyproject.toml  rag_agent.py  requirements.txt  rt.py
backend/tests/: test_rag_retrieval.py
chatbot-backend/: ingest.py  main.py  requirements.txt
humanoid-robotics-book/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
humanoid-robotics-book/docs/: appendix.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  document.md  introduction.md
humanoid-robotics-book/src/components/Auth/: Auth.module.css  AuthButtons.tsx  LoginModal.tsx  SignupModal.tsx
humanoid-robotics-book/src/components/Chatbot/: index.tsx  styles.module.css
humanoid-robotics-book/src/components/RecentBlogPosts/: index.tsx
humanoid-robotics-book/src/contexts/: AuthContext.tsx  ChatbotContext.tsx
humanoid-robotics-book/src/pages/: index.tsx
humanoid-robotics-book/src/theme/DocItem/: index.tsx
humanoid-robotics-book/src/theme/Footer/Copyright/: index.tsx
humanoid-robotics-book/src/theme/Layout/: index.tsx
humanoid-robotics-book/src/theme/Navbar/: ChatbotIcon.tsx  LanguageSelector.tsx  styles.module.css
humanoid-robotics-book/src/utils/: translationService.ts
specs/001-embedding-pipeline-setup/: spec.md
specs/001-embedding-pipeline-setup/checklists/: requirements.md
(+1 files in other folders)
