[project]
name = "ai-humanoid-robotics"
version = "0.1.0"
description = "Project for AI Humanoid Robotics"
requires-python = ">=3.8"
dependencies = [
    "cohere>=5.13.2",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.12.1",
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
